--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.huaxing.a3dgame.MainActivity">
-
+    tools:context=".fragment.MainFragment">
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
     <HorizontalScrollView
         android:id="@+id/mainactivity_top_hscrollview"
         android:layout_width="match_parent"
@@ -13,7 +15,6 @@
         android:background="@drawable/mainactivity_top_bg"
         android:fillViewport="true"
         android:scrollbars="none">
-
         <RadioGroup
             android:id="@+id/mainactivity_top_radiogroup"
             android:layout_width="match_parent"
@@ -141,61 +142,10 @@
                 android:textSize="16sp" />
         </RadioGroup>
     </HorizontalScrollView>
-
-    <RadioGroup
-        android:id="@+id/mainactivity_bottom_rg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#000000"
-        android:orientation="horizontal"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp">
-
-        <RadioButton
-            android:id="@+id/mainactivity_bottom_btn01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableTop="@drawable/main_bottom_chapter"
-            android:enabled="false"
-            android:gravity="center"
-            android:text="文章"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
-
-        <RadioButton
-            android:id="@+id/mainactivity_bottom_btn02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableTop="@drawable/main_bottom_forum"
-            android:enabled="false"
-            android:gravity="center"
-            android:text="论坛"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
-
-        <RadioButton
-            android:id="@+id/mainactivity_bottom_btn03"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableTop="@drawable/main_bottom_game"
-            android:enabled="false"
-            android:gravity="center"
-            android:text="游戏"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
-    </RadioGroup>
-
-    <android.support.v4.view.ViewPager
+    <com.huaxing.a3dgame.customview.MainFragmentViewPager
         android:id="@+id/main_activity_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/mainactivity_bottom_rg"
-        android:layout_below="@id/mainactivity_top_hscrollview"></android.support.v4.view.ViewPager>
+        android:layout_below="@id/mainactivity_top_hscrollview"></com.huaxing.a3dgame.customview.MainFragmentViewPager>
+
 </RelativeLayout>
